<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartCart</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_end_session">End Session</string>
    <string name="menu_restart">New Session</string>
    
    
    <!-- Buttons: left panel -->
	<string name="left_panel">This is the Left Panel</string>
    <string name="add_item_button">Add Item</string>
	<string name="find_item_button">Find Item</string>
	<string name="my_cart_button">My Cart</string>
	<string name="coupon_button">Coupons</string>
	<string name="checkout_button">Checkout</string>
	<string name="checkout_back_button">Back</string>
		
	<!-- MyChart Main/Middle Panel -->
	<string name="main_panel">This is the Middle/Main Panel</string>
    <string name="itemized_text_view">Itemized Receipt: </string>
	
	<!-- Recommendation Panel -->
	<string name="right_panel">This is the right panel</string>
    <string name="recommendation_text">Recommendations for You</string>
	<string name="recommendation_text_2">(Click the image to Find.)</string>
	
	<!-- Find Result Panel -->
    <string name="find_result_text">Search Result(s): </string>
    <string name="find_result_text_2">Click the image to show location. </string>
    
    <!-- Coupon Page -->
    <string name="coupon_title">Coupons Available for Today</string>
	
    <!-- Checkout Page -->
    <string name="swipe_instruction">Swipe your card.</string>
	<string name="checkout_instruction">When you are ready, please swipe your card above.</string>
	
	<!-- Thankyou Page -->
	<string name="yes_button">  Yes  </string>
	<string name="no_button">  No  </string>
	<string name="email_hint">Email Address</string>
	
    <!-- Add Item Dialog -->
	<string name="add_item_dialog_barcode_label">Barcode: </string>
	<string name="barcode_hint">Scan Item\'s Barcode</string>
	<string name="add_item_dialog_add">Add</string>
	<string name="add_item_dialog_cancel">Cancel</string>
	
	<!-- New Item Dialog (New Item to be added to Database)-->
	<string name="new_item_dialog_database">Add to Database</string>
	<string name="new_item_dialog_database_cart">Add to Database and Cart</string>
	<string name="new_item_dialog_cancel">Cancel</string>
	<string name="new_item_name_label">Product Name: </string>
	<string name="new_item_name_hint">Product Name + Brand</string>
	<string name="new_item_barcode_label">Barcode: </string>
	<string name="new_item_barcode_hint">Full Barcode (Required)</string>
	<string name="new_item_listed_price_label">Price: </string>
	<string name="new_item_listed_price_hint"></string>
	<string name="new_item_sale_price_label">Sale Price? </string>
	<string name="new_item_sale_price_hint">Optional</string>
	<string name="new_item_location_label">Location: </string>
	<string name="new_item_location_hint">Shelf Number</string>
	<string name="new_item_image_label">Product Image: </string>
	<string name="new_item_image_hint">Optional</string>
	<string name="new_item_description_label">Description: </string>
	<string name="new_item_description_hint">Enter any keyword related to the product</string>
	
	<!-- Find Item Activity Window -->
	<string name="find_label">What do you wish to find today? </string>
	<string name="find_hint">Enter product name, category, or brand to search</string>
	<string name="find_button">Find</string>
	<string name="map_main">Store Map</string>
	
	<!-- Colors and Such -->		
    <drawable name="red">#FF0000</drawable>
    <drawable name="blue">#770000ff</drawable>
    <drawable name="green">#7700ff00</drawable>
	<drawable name="yellow">#77ffff00</drawable>
	<drawable name="black">#ff000000</drawable>
	<drawable name="LightGrey">#D3D3D3</drawable>
	<drawable name="DarkGrey">#A9A9A9</drawable>
	<drawable name="white">#ffffff</drawable>
	
	<drawable name="recommendation_background_color">#AACEE4FB</drawable>
	<drawable name="coupon_main_color">#AACEE4FB</drawable>
	<drawable name="find_result_background_color">#AACEE4FB</drawable>
	
	<drawable name="middle_layout_color">#AAC1EED2</drawable>
	
	<drawable name="title_banner_color">#AAA9A9A9</drawable>
	<drawable name="title_banner_color_light">#55A9A9A9</drawable>
	
	<!-- <drawable name="button_grey">#AAA9A9A9</drawable>
	<drawable name="button_grey_light">#55A9A9A9</drawable>
	 -->
	<drawable name="button_grey">#AAA9A9A9</drawable>
	<drawable name="button_grey_light">#55A9A9A9</drawable>
	<drawable name="button_transparent">#AAC1EED2</drawable>
	
	<drawable name="button_text_color">#18528F</drawable>
	<drawable name="button_untext_color">#5518528F</drawable>
	
	<drawable name="theme_purple">#6D5BB3</drawable>
	<drawable name="theme_red">#6D5BB3</drawable>
	<drawable name="theme_green">#6D5BB3</drawable>

	<color name="Discount">#FF0000</color>
</resources>