<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/new_item_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:singleLine="true"
            android:text="@string/new_item_name_label"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            />
	            
	    <EditText
	        android:id="@+id/new_item_name_edit_text"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:scrollHorizontally="true"
	        android:gravity="fill_horizontal"
	        android:singleLine="true"
	        android:hint="@string/new_item_name_hint"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">

        <TextView
	        android:id="@+id/new_item_barcode_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:gravity="left"
	        android:singleLine="true"
	        android:text="@string/new_item_barcode_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/new_item_barcode_edit_text"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="20dip"
    	    android:layout_marginRight="20dip"
    	    android:ems="10"
    	    android:gravity="fill_horizontal"
    	    android:hint="@string/new_item_barcode_hint"
    	    android:scrollHorizontally="true"
    	    android:singleLine="true"
    	    android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium" >

    	    <requestFocus />
    	</EditText>
    	
    	
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    	
        <TextView
	        android:id="@+id/new_item_listed_price_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:gravity="left"
	        android:singleLine="true"
	        android:text="@string/new_item_listed_price_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/new_item_listed_price_edit_text"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="20dip"
    	    android:layout_marginRight="20dip"
    	    android:ems="10"
    	    android:gravity="fill_horizontal"
    	    android:hint="@string/new_item_listed_price_hint"
    	    android:scrollHorizontally="true"
    	    android:singleLine="true"
    	    android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceMedium" >

    	    <requestFocus />
    	</EditText>
    	
    	<TextView
	        android:id="@+id/new_item_sale_price_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:gravity="left"
	        android:singleLine="true"
	        android:text="@string/new_item_sale_price_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/new_item_sale_price_edit_text"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="20dip"
    	    android:layout_marginRight="20dip"
    	    android:ems="10"
    	    android:gravity="fill_horizontal"
    	    android:hint="@string/new_item_sale_price_hint"
    	    android:scrollHorizontally="true"
    	    android:singleLine="true"
    	    android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceMedium" >

    	    <requestFocus />
    	</EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    	
        <TextView
	        android:id="@+id/new_item_location_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:gravity="left"
	        android:singleLine="true"
	        android:text="@string/new_item_location_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/new_item_location_edit_text"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="20dip"
    	    android:layout_marginRight="20dip"
    	    android:ems="10"
    	    android:gravity="fill_horizontal"
    	    android:hint="@string/new_item_location_hint"
    	    android:scrollHorizontally="true"
    	    android:singleLine="true"
    	    android:inputType="number"
        	android:textAppearance="?android:attr/textAppearanceMedium" >

    	    <requestFocus />
    	</EditText>
    	
    	<TextView
	        android:id="@+id/new_item_image_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:gravity="left"
	        android:singleLine="true"
	        android:text="@string/new_item_image_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/new_item_image_edit_text"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="20dip"
    	    android:layout_marginRight="20dip"
    	    android:ems="10"
    	    android:gravity="fill_horizontal"
    	    android:hint="@string/new_item_image_hint"
    	    android:scrollHorizontally="true"
    	    android:singleLine="true"
    	    android:textAppearance="?android:attr/textAppearanceMedium" >

    	    <requestFocus />
    	</EditText>
        
        
    </LinearLayout>
    
    <LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="vertical" >
    	
   	    <TextView
	        android:id="@+id/new_item_description_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:gravity="left"
	        android:singleLine="true"
	        android:text="@string/new_item_description_label"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

    	<EditText
    	    android:id="@+id/new_item_description_edit_text"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="20dip"
    	    android:layout_marginRight="20dip"
    	    android:ems="10"
    	    android:gravity="fill_horizontal"
    	    android:hint="@string/new_item_description_hint"
    	    android:scrollHorizontally="true"
    	    android:singleLine="true"
    	    android:textAppearance="?android:attr/textAppearanceMedium" >

    	    <requestFocus />
    	</EditText>
   	</LinearLayout>

</LinearLayout>