<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--     Demonstrates a horizontal linear layout with equally sized columns -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:baselineAligned="false">

    <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
			android:orientation="vertical" 
			android:background="@drawable/blue">

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/add_item_button" 
            	android:textSize="30sp"
            	/>

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/find_item_button" 
            	android:textSize="30sp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/my_cart_button" 
            	android:textSize="30sp"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/coupon_button" 
            	android:textSize="30sp"/>
            
            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/checkout_button" 
            	android:textSize="30sp"/>

        </LinearLayout>
    
    <!--============================ Middle/Main Panel ============================-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/findLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_label"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
	        android:id="@+id/find_edit_text"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_weight="2"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:scrollHorizontally="true"
	        android:gravity="fill_horizontal"
	        android:singleLine="true"
	        android:hint="@string/find_hint"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/find_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/find_button" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:layout_marginTop="20dip"
	        android:layout_marginBottom="20dip"
            android:src="@drawable/map1" android:contentDescription="@string/map_main"/>
        
    </LinearLayout>
    
   <!-- RIGHT PANEL: Results -->
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" 
            >
        
        <TextView
		android:id="@+id/FindResultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/find_result_text" 
        />

    	<ScrollView
         android:id="@+id/findResultScrollView" 
         android:layout_width="match_parent" 
         android:layout_height="fill_parent" 
         android:fadingEdge="none" >
        
                <LinearLayout 
                    android:id="@+id/findResultVerticalLayout" 
                    android:layout_width="match_parent" 
                    android:layout_height="wrap_content" 
                    android:orientation="vertical"
                    android:gravity="center_horizontal">  
                    
                </LinearLayout>
    </ScrollView>
    	        
    </LinearLayout>
        

</LinearLayout>