<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" 
    android:baselineAligned="false"
    android:background="@drawable/background_main">
    
    <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
			android:orientation="vertical" 
			>

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/add_item_button" 
            	android:textSize="30sp"
            	android:textStyle="bold"
            	android:layout_marginLeft="20dip"	
		        android:layout_marginRight="20dip"
            	android:layout_marginTop="20dip"	
		        android:layout_marginBottom="20dip"
            	android:background="@drawable/button_grey_light"
            	android:textColor="@drawable/button_text_color"
            	android:enabled="false"
            	/>

            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/find_item_button" 
            	android:layout_marginLeft="20dip"	
		        android:layout_marginRight="20dip"
            	android:layout_marginTop="20dip"	
		        android:layout_marginBottom="20dip"
            	android:background="@drawable/button_grey_light"
            	android:textColor="@drawable/button_text_color"
            	android:enabled="false"
            	android:textStyle="bold"
            	android:textSize="30sp"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/my_cart_button" 
            	android:layout_marginLeft="20dip"	
		        android:layout_marginRight="20dip"
            	android:layout_marginTop="20dip"	
		        android:layout_marginBottom="20dip"
            	android:background="@drawable/button_grey_light"
            	android:textColor="@drawable/button_text_color"
            	android:enabled="false"
            	android:textStyle="bold"
            	android:textSize="30sp"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/coupon_button" 
            	android:layout_marginLeft="20dip"	
		        android:layout_marginRight="20dip"
            	android:layout_marginTop="20dip"	
		        android:layout_marginBottom="20dip"
            	android:background="@drawable/button_grey_light"
            	android:textColor="@drawable/button_text_color"
            	android:enabled="false"
            	android:textStyle="bold"
            	android:textSize="30sp"/>
            
            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
            	android:text="@string/checkout_back_button" 
            	android:layout_marginLeft="20dip"	
		        android:layout_marginRight="20dip"
            	android:layout_marginTop="20dip"	
		        android:layout_marginBottom="20dip"
            	android:background="@drawable/button_grey"
            	android:textColor="@drawable/button_text_color"
            	android:textStyle="bold"
            	android:textSize="30sp"/>
            
        </LinearLayout>
        
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical" 
        android:layout_marginLeft="0dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="20dip"
        android:id="@+id/checkoutVerticalLayout">
            
        <!-- Checkout Image, will turn into signature  -->
        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:background="@drawable/title_banner_color"
	            android:id="@+id/swipe_n_sign">
	        
	        <ImageView 
	            android:src="@drawable/swipe_up"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            
	            />
        
        </LinearLayout>
        
        
        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:background="@drawable/title_banner_color"
	            android:layout_marginTop="20dip"
	            >
        
		        <TextView
		            android:id="@+id/totalTextView"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:text="@string/main_panel"
		           	android:layout_marginLeft="20dip" 
		        	android:layout_marginRight="10dip"
		        	android:layout_marginBottom="15dip"
		        	android:layout_marginTop="20dip"
		            android:textSize="40sp" 
		            android:textStyle="bold"
		            android:textColor="@drawable/button_text_color"
		            />

        </LinearLayout>
        
        
    </LinearLayout>

</LinearLayout>